; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_wcd9335.c_wcd9335_codec_get_amic_pwlvl_reg.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_wcd9335.c_wcd9335_codec_get_amic_pwlvl_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }

@WCD9335_ANA_AMIC1 = common dso_local global i32 0, align 4
@WCD9335_ANA_AMIC3 = common dso_local global i32 0, align 4
@WCD9335_ANA_AMIC5 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"invalid amic: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_component*, i32)* @wcd9335_codec_get_amic_pwlvl_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wcd9335_codec_get_amic_pwlvl_reg(%struct.snd_soc_component* %0, i32 %1) #0 {
  %3 = alloca %struct.snd_soc_component*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %13 [
    i32 1, label %7
    i32 2, label %7
    i32 3, label %9
    i32 4, label %9
    i32 5, label %11
    i32 6, label %11
  ]

7:                                                ; preds = %2, %2
  %8 = load i32, i32* @WCD9335_ANA_AMIC1, align 4
  store i32 %8, i32* %5, align 4
  br label %19

9:                                                ; preds = %2, %2
  %10 = load i32, i32* @WCD9335_ANA_AMIC3, align 4
  store i32 %10, i32* %5, align 4
  br label %19

11:                                               ; preds = %2, %2
  %12 = load i32, i32* @WCD9335_ANA_AMIC5, align 4
  store i32 %12, i32* %5, align 4
  br label %19

13:                                               ; preds = %2
  %14 = load %struct.snd_soc_component*, %struct.snd_soc_component** %3, align 8
  %15 = getelementptr inbounds %struct.snd_soc_component, %struct.snd_soc_component* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @dev_err(i32 %16, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %13, %11, %9, %7
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}

declare dso_local i32 @dev_err(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
